# tesseract-opencv-cmake-cpp-example

./: CMakeLists.txt  README.md  main.cpp
